<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_map_directional"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:clickable="true"
    android:focusableInTouchMode="true"

    tools:context="ucsd.cse110fa16.group14.ipark.Mapa">

    <ucsd.cse110fa16.group14.ipark.MapaUsuario
        android:layout_above="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/myMap"
        android:clickable="true"
        android:focusableInTouchMode="true" />

    <Button
        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBaseline="@+id/editText"
        android:layout_alignEnd="@+id/editText"
        android:layout_alignParentBottom="false"
        android:layout_alignParentEnd="true"
        android:text="Informe"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="230dp"
        android:layout_height="45dp"
        android:layout_above="@+id/button14"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:background="@drawable/lighter_border"
        android:ems="10"
        android:hint="Num. Estacionamiento"
        android:inputType="number"
        android:paddingLeft="10dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/button9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="#990000"
        android:text="EMERGENCIA"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="  0    1     2     3     4     5     6     7     8    9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView32"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="14dp" />

    <TextView
        android:text="20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView31"
        android:layout_alignEnd="@+id/textView31"
        android:layout_marginTop="24dp"
        android:id="@+id/textView34"
        android:textSize="18sp" />

    <TextView
        android:text="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView31"
        android:layout_below="@+id/textView7"
        android:textSize="18sp"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView34"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:id="@+id/textView35"
        android:textSize="18sp" />

    <TextView
        android:text="40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView35"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp"
        android:id="@+id/textView36"
        android:textSize="18sp" />

    <TextView
        android:text="50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView36"
        android:layout_alignEnd="@+id/textView36"
        android:layout_marginTop="16dp"
        android:id="@+id/textView46"
        android:textSize="18sp" />

    <TextView
        android:text="00"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="18sp"
        android:layout_below="@+id/textView32"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textView64"
        android:textSize="18sp"
        android:layout_below="@+id/textView61"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/textView61"
        android:textSize="18sp"
        android:layout_below="@+id/textView46"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button14"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:background="#4F17E9"
        android:text="PRINCIPAL"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

</RelativeLayout>
