<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    tools:context="ucsd.cse110fa16.group14.ipark.PersonalInfo"
    >

    <TextView
        android:text="Email: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView47"
        android:layout_alignStart="@+id/textView47"
        android:layout_marginTop="27dp"
        android:id="@+id/textView48"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView49"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView48"
        android:layout_below="@+id/textView48"
        android:layout_marginTop="27dp"
        android:text="Placa"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/textView75"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView49"
        android:layout_below="@+id/textView49"
        android:layout_marginTop="28dp"
        android:text="Usuario:"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView75"
        android:layout_alignStart="@+id/email"
        android:text="H5GR2018"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView49"
        android:layout_alignStart="@+id/nameTV"
        android:text="espinoza@gmail.com"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView75"
        android:layout_alignBottom="@+id/textView75"
        android:layout_alignStart="@+id/license"
        android:text="Mi usuario"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView48"
        android:layout_marginStart="11dp"
        android:layout_toEndOf="@+id/textView75"
        android:text="  Nombre y Apellido"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView47"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView28"
        android:layout_marginStart="28dp"
        android:layout_marginTop="60dp"
        android:text="NOMBRE:"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/new_home"
        android:background="#FFFFFF"
        android:id="@+id/button19"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/button19"
        android:layout_centerHorizontal="true"
        android:text="INFORMACIÓN PERSONAL"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/help"
        android:background="@mipmap/help"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_width="46dp"
        android:layout_height="46dp" />

    <Button
        android:id="@+id/button21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="38dp"
        android:layout_toEndOf="@+id/textView49"
        android:text="Cambiar Contraseña"
        android:textSize="15dp"
        android:textStyle="bold" />

</RelativeLayout>